change the UI for new registration process - finetuning

--- a/socrates/lib/registration/views/participationinfoform.pug
+++ b/socrates/lib/registration/views/participationinfoform.pug
@@ -52,22 +52,22 @@ mixin participationinfoform(roomOptions, registration)
                   th.text-center
                     .radio-inline
                       label
-                        input(type='radio', name='nightsOptions', value='2')
+                        input(type='radio', name='nightsOption', value='2')
                         b Sat evening
                   th.text-center
                     .radio-inline
                       label
-                        input(type='radio', name='nightsOptions', value='3')
+                        input(type='radio', name='nightsOption', value='3')
                         b Sun morning
                   th.text-center
                     .radio-inline
                       label
-                        input(type='radio', name='nightsOptions', value='4')
+                        input(type='radio', name='nightsOption', value='4')
                         b Sun evening*
                   th.text-center
                     .radio-inline
                       label
-                        input(type='radio', name='nightsOptions', value='5')
+                        input(type='radio', name='nightsOption', value='5')
                         b Mon morning*
               tbody
                 for option in roomOptions
