--- a/socrates/lib/site/views/sponsoring.pug
+++ b/socrates/lib/site/views/sponsoring.pug
@@ -6,18 +6,19 @@ block content
   .row
     .col-sm-12
       .page-header
-        img.logo-left-small(src='/img/socrates_no_text_40.png', alt='SoCraTes Conference 2016 - Software Craftsmanship and Testing')
-        h1 Sponsoring SoCraTes 2016
+        img.logo-left-small(src='/img/socrates_no_text_40.png', alt='SoCraTes Conference 2017 - Software ' +
+        'Craftsmanship and Testing')
+        h1 Sponsoring SoCraTes 2017
   .row
     .col-sm-12
-      p Thank you for your interest in making SoCraTes 2016 happen!
+      p Thank you for your interest in making SoCraTes 2017 happen!
       p.
         We invite you to sponsor the conference and help make this a brilliant event. Your financial support makes a
         huge difference to the event and helps make sure it will be affordable for our attendees.
       .well
         h3 About the event
         p.
-          The sixth annual Software Craftsmanship and Testing Conference will take place from 25 - 28 August 2016
+          The sixth annual Software Craftsmanship and Testing Conference will take place from 24 - 27 August 2017
           in Soltau near Hamburg, Germany.
         p This year, up to 220 people can participate &ndash; after our successful upscaling to 160 participants in 2015.
         p.
