--- a/socrates/lib/site/views/sponsoring.pug
+++ b/socrates/lib/site/views/sponsoring.pug
@@ -6,8 +6,7 @@ block content
   .row
     .col-sm-12
       .page-header
-        img.logo-left-small(src='/img/socrates_no_text_40.png', alt='SoCraTes Conference 2017 - Software ' +
-        'Craftsmanship and Testing')
+        img.logo-left-small(src='/img/socrates_no_text_40.png', alt='SoCraTes Conference 2017 - Software ' + 'Craftsmanship and Testing')
         h1 Sponsoring SoCraTes 2017
   .row
     .col-sm-12
