--- a/softwerkskammer/lib/members/views/indexForTag.pug
+++ b/softwerkskammer/lib/members/views/indexForTag.pug
@@ -10,8 +10,10 @@ block content
       small #{interest}
   .row
     .col-md-6.col-md-push-6
-      +tagCloud(members, '#cb6868')
+      #tag-cloud
     .col-md-6.col-md-pull-6
       +memberlistHeading(t('members.has_by_interests'), members.length)
       +memberlist(members)
 
+block scripts
+  +tagCloud(members, '#cb6868')
