--- a/softwerkskammer/lib/payment/views/index.pug
+++ b/softwerkskammer/lib/payment/views/index.pug
@@ -15,3 +15,8 @@ block content
       +paymentMoneyTransfer(paymentInfo)
     .col-md-6
       +paymentCreditCard(paymentInfo, placeholder, '/payment/submitCreditCard')
+
+block scripts
+  +stripeScript(paymentInfo)
+  script(src='/clientscripts/check-paymentform.js')
+  script $('#amount').keyup(amountHandler)
