Revert "page loading optimization by moving javascript to end of files"
This reverts commit 89d706488654077e135f9c1587c571425c2aaf8c.

--- a/softwerkskammer/lib/administration/views/groupTable.pug
+++ b/softwerkskammer/lib/administration/views/groupTable.pug
@@ -2,6 +2,7 @@ extends ../../../views/layoutOnlyMain
 include ../../../views/dataTables-mixin
 
 block scripts
+  +dataTableImport
   +dataTable('#grouptable', '[ 1, "asc" ]', '[{targets: 0, sortable: false}]', true)
 
 block title
