--- a/softwerkskammer/lib/waitinglist/views/waitinglistTable.pug
+++ b/softwerkskammer/lib/waitinglist/views/waitinglistTable.pug
@@ -4,6 +4,7 @@ include ../../members/views/memberlist-mixin
 include ../../../views/dataTables-mixin
 
 block scripts
+  +dataTableImport
   +dataTable('#waitinglisttable', '[ 2, "asc" ]', '[{targets: 0, sortable: false}, {targets: [2,3], type: "date-eu"}]', true)
   script.
     function removeFromWaitinglist(activityUrl, nickname, buttonid) {
