--- a/softwerkskammer/views/imageUpload.pug
+++ b/softwerkskammer/views/imageUpload.pug
@@ -9,6 +9,35 @@ mixin uploadButtons(btnGroupClasses)
     span#btn-cancel.btn.btn-default #{t('general.cancel')}
     button.btn.btn-primary(type='submit') #{t('general.save')}
 
+mixin imageScripts
+  script.
+    $(function () {
+      $('#recordForm').on('submit', function () {
+        $('#recordForm button[type="submit"]').prepend($('<i class="fa fa-fw fa-spinner fa-spin"/>&nbsp;'));
+      });
+    });
+    $('#input-file').on('change', function () {
+      if (!this.files || !this.files[0]) { return null; }
+      var reader = new FileReader();
+      reader.onload = function (event) {
+        $('img#preview').attr('src', event.target.result);
+        $('#previewContainer').show();
+        $('#selectFileButton').hide();
+        $('#uploadButtons').show();
+      };
+      reader.readAsDataURL(this.files[0]);
+    });
+    $('#btn-cancel').click(function () {
+      $('#previewContainer').hide();
+      $('#uploadButtons').hide();
+      $('#selectFileButton').show();
+      $('#input-file').val(null);
+    });
+    $(function () {
+      $('#previewContainer').hide();
+      $('#uploadButtons').hide();
+    });
+
 mixin imageUpload
   #selectFileButton
     +selectFileButton('general.photo')
@@ -19,3 +48,4 @@ mixin imageUpload
     div
       div(style='margin-top: 5px;')
         img#preview(style='max-width: 100%;')
+  +imageScripts
