--- a/softwerkskammer/lib/activities/views/gdcr.pug
+++ b/softwerkskammer/lib/activities/views/gdcr.pug
@@ -48,6 +48,13 @@ block content
           p: a(href='/activities/gdcr' + year) #{year}
 
 
+  script.
+    function adjustMapsize() {
+      $('.groupsmap').each(function() {$(this).height(1.289 * $(this).width()); })
+    }
+    $(document).ready(adjustMapsize);
+    $.event.add(window, 'resize', adjustMapsize);
+
 block scripts
   if (activities.length > 0)
     script.
