--- a/softwerkskammer/lib/administration/views/activityTable.pug
+++ b/softwerkskammer/lib/administration/views/activityTable.pug
@@ -2,6 +2,7 @@ extends ../../../views/layoutOnlyMain
 include ../../../views/dataTables-mixin
 
 block scripts
+  +dataTableImport
   +dataTable('#activitytable', '[ 1, "asc" ]', '[{targets: 0, sortable: false}, {targets: [3,4], type: "date-eu"}]', true)
 
 block title
