--- a/softwerkskammer/lib/administration/views/memberAndGroupTable.pug
+++ b/softwerkskammer/lib/administration/views/memberAndGroupTable.pug
@@ -3,6 +3,7 @@ include ../../members/views/memberlist-mixin
 include ../../../views/dataTables-mixin
 
 block scripts
+  +dataTableImport
   +dataTable('#memberandgrouptable', '[ 1, "desc" ]', '[]', true)
 
 
