--- a/softwerkskammer/lib/members/views/memberlist-mixin.pug
+++ b/softwerkskammer/lib/members/views/memberlist-mixin.pug
@@ -22,6 +22,7 @@ mixin linkedMember(nickname)
   a(href='/members/' + encodeURIComponent(nickname)) #{nickname}
 
 mixin tagCloud(members, startcolor)
+  #tag-cloud
   script.
     $(document).ready(function() {
       $('#tag-cloud').jQCloud(
