fixing the waitinglist stuff - only management pages left for integrating the duration

--- a/socrates/lib/registration/views/participate.pug
+++ b/socrates/lib/registration/views/participate.pug
@@ -32,7 +32,7 @@ block content
         +hidden('activityUrl', registrationTuple.activityUrl)
         +hidden('roomType', registrationTuple.roomType)
         +hidden('duration', registrationTuple.duration)
-        +hidden('desiredRoomTypes', registrationTuple.desiredRoomTypes)
+        +hidden('desiredRoomTypes', registrationTuple.desiredRoomTypes.toString())
         fieldset
           +memberinfoform(member, subscriber, 'members.edit_registration', allCountries)
           +userinfoform(addon, participation, registrationTuple.roomType && registrationTuple.roomType.indexOf('bed_in_') > -1)
