--- a/socrates/lib/registration/views/participationinfoform.pug
+++ b/socrates/lib/registration/views/participationinfoform.pug
@@ -78,13 +78,13 @@ mixin participationinfoform(roomOptions, registration)
                           input(type='checkbox', name='roomsOptions', value=option.id)
                           b &nbsp; #{option.name}
                     td.text-center
-                      span(style='margin-left:20px;') #{option.two}&nbsp;€
+                      span(id=option.id + '2', style='margin-left:20px;') #{option.two}&nbsp;€
                     td.text-center
-                      span(style='margin-left:20px;') #{option.three}&nbsp;€
+                      span(id=option.id + '3', style='margin-left:20px;') #{option.three}&nbsp;€
                     td.text-center
-                      span(style='margin-left:20px;') #{option.threePlus}&nbsp;€
+                      span(id=option.id + '4', style='margin-left:20px;') #{option.threePlus}&nbsp;€
                     td.text-center
-                      span(style='margin-left:20px;') #{option.four}&nbsp;€
+                      span(id=option.id + '5', style='margin-left:20px;') #{option.four}&nbsp;€
 
         .row(style='margin-top:-15px; margin-bottom:15px')
           .col-xs-12
@@ -110,12 +110,16 @@ mixin participationinfoform(roomOptions, registration)
         script.
           $(function () {
             var selectedOptions = '#{registration.selectedOptions}'.split(';');
-            console.log(selectedOptions)
             selectedOptions.forEach(function (option) {
-              var selectedInput = $('input[value="' + option + '"]')
-              selectedInput.attr('checked', 'checked');
-              selectedInput.parent().parent().parent().addClass('bg-success')
-              selectedInput.parent().addClass('text-success')
+              const roomWithDuration = option.split(',');
+              if (roomWithDuration.length === 3) { //waitinglist
+                $('input[value="' + roomWithDuration[2] + '"]').attr('checked', 'checked');
+                $('input[value="' + roomWithDuration[0] + '"]').attr('checked', 'checked');
+              } else { //must be the booked bed
+                var bookedRoom = $('#' + roomWithDuration[0] + roomWithDuration[1])
+                bookedRoom.parent().addClass('bg-success')
+                bookedRoom.addClass('text-success')
+              }
             });
           })
                                 
