--- a/socrates/lib/activityresults/views/create.pug
+++ b/socrates/lib/activityresults/views/create.pug
@@ -1,6 +1,6 @@
 extends ../../../views/layout
 
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
 
 block title
   | #{t('activityresults.new')}
