--- a/socrates/lib/activityresults/views/edit_photo.pug
+++ b/socrates/lib/activityresults/views/edit_photo.pug
@@ -1,6 +1,6 @@
 extends ../../../views/layoutNoFooter
 
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
 
 block title
   =activityResult.id() + ' / Edit Photo'
