--- a/socrates/lib/activityresults/views/get.pug
+++ b/socrates/lib/activityresults/views/get.pug
@@ -1,7 +1,7 @@
 extends ../../../views/layoutNoFooter
 
-include  ../../../views/formComponents
-include  ../../../views/imageUpload
+include  ../../../../sharedViewComponents/formComponents
+include  ../../../../sharedViewComponents/imageUpload
 
 block title
   | #{activityResult.id()}
