--- a/socrates/lib/members/views/edit.pug
+++ b/socrates/lib/members/views/edit.pug
@@ -1,6 +1,6 @@
 extends ../../../views/layout
 
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
 include userinfoform
 
 block scripts
