--- a/socrates/lib/members/views/get.pug
+++ b/socrates/lib/members/views/get.pug
@@ -1,6 +1,6 @@
 extends ../../../views/layout
 
-include ../../../views/formComponents
+include ../../../../sharedViewComponents/formComponents
 include ../../../../softwerkskammer/lib/members/views/editavatar
 include ../../../../softwerkskammer/lib/members/views/memberlist-mixin
 include resignBanner
