--- a/socrates/lib/members/views/userinfoform.pug
+++ b/socrates/lib/members/views/userinfoform.pug
@@ -1,4 +1,4 @@
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
 
 mixin memberinfoform(member, subscriber, newmember_text, allCountries)
   +hidden('id', member.id())
