--- a/socrates/lib/registration/views/participationinfoform.pug
+++ b/socrates/lib/registration/views/participationinfoform.pug
@@ -1,4 +1,4 @@
-include  ../../../views/formComponents
+include ../../../../sharedViewComponents/formComponents
 mixin participationinfoform(roomOptions, registration)
   .row
     .col-md-6
