--- a/socrates/lib/wiki/views/get.pug
+++ b/socrates/lib/wiki/views/get.pug
@@ -1,5 +1,5 @@
 extends ../../../views/layoutNoFooter
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
 
 block title
   | #{pageName} : #{subdir}
