--- a/softwerkskammer/lib/administration/views/activityTable.pug
+++ b/softwerkskammer/lib/administration/views/activityTable.pug
@@ -1,5 +1,5 @@
 extends ../../../views/layoutOnlyMain
-include ../../../views/dataTables-mixin
+include ../../../../sharedViewComponents/dataTables-mixin
 
 block scripts
   +dataTableImport
