--- a/softwerkskammer/lib/members/views/editavatar.pug
+++ b/softwerkskammer/lib/members/views/editavatar.pug
@@ -1,5 +1,5 @@
-include ../../../views/formComponents
-include ../../../views/imageUpload
+include ../../../../sharedViewComponents/formComponents
+include ../../../../sharedViewComponents/imageUpload
 
 mixin avatar(member, returnToParticipantsListing)
   if(accessrights.canEditMember(member))
