--- a/softwerkskammer/lib/payment/views/paymentFormComponents.pug
+++ b/softwerkskammer/lib/payment/views/paymentFormComponents.pug
@@ -1,4 +1,4 @@
-include ../../../views/formComponents
+include ../../../../sharedViewComponents/formComponents
 
 mixin stripeScript(paymentInfo)
   script(type='text/javascript', src='https://js.stripe.com/v2/')
