--- a/softwerkskammer/lib/waitinglist/views/waitinglistTable.pug
+++ b/softwerkskammer/lib/waitinglist/views/waitinglistTable.pug
@@ -1,7 +1,7 @@
 extends ../../../views/layout
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
 include ../../members/views/memberlist-mixin
-include ../../../views/dataTables-mixin
+include ../../../../sharedViewComponents/dataTables-mixin
 
 block scripts
   +dataTableImport
