--- a/socrates/lib/activities/views/activities-forms.pug
+++ b/socrates/lib/activities/views/activities-forms.pug
@@ -1,4 +1,4 @@
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
 
 mixin activityform(socratesReadModel, roomTypes)
   form#activityform(action='/activities/submit', method='post')
