--- a/socrates/lib/mailsender/views/mailsender-forms.pug
+++ b/socrates/lib/mailsender/views/mailsender-forms.pug
@@ -1,4 +1,4 @@
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
  
 mixin mailform(message, successURL, massMailing)
   form#mailform(action='/mailsender/send', method='post')
