--- a/socrates/lib/wiki/views/edit.pug
+++ b/socrates/lib/wiki/views/edit.pug
@@ -1,6 +1,6 @@
 extends ../../../views/layoutNoFooter
 
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
 
 block title
   | #{pageName} : #{subdir} - #{t('general.edit')}
