--- a/socrates/lib/wiki/views/participants.pug
+++ b/socrates/lib/wiki/views/participants.pug
@@ -1,5 +1,5 @@
 extends ../../../views/layoutNoFooter
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
 include ../../../../softwerkskammer/lib/members/views/editavatar
 
 block title
