--- a/softwerkskammer/lib/activities/views/get.pug
+++ b/softwerkskammer/lib/activities/views/get.pug
@@ -1,7 +1,7 @@
 extends ../../../views/layout
 include ../../members/views/memberlist-mixin
 include ../../../views/googlemaps-component
-include ../../../views/formComponents
+include ../../../../sharedViewComponents/formComponents
 include activities-mixins
 
 block title
