--- a/softwerkskammer/lib/activityresults/views/edit_photo.pug
+++ b/softwerkskammer/lib/activityresults/views/edit_photo.pug
@@ -1,6 +1,6 @@
 extends ../../../views/layoutOnlyMain
 
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
 
 block title
   =activityResult.id() + ' / Edit Photo'
