--- a/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
+++ b/softwerkskammer/lib/mailsender/views/mailsender-forms.pug
@@ -1,4 +1,4 @@
-include  ../../../views/formComponents
+include  ../../../../sharedViewComponents/formComponents
  
 mixin mailform(message, regionalgroups, themegroups)
   form#mailform(action='/mailsender/send', method='post')
