--- a/commonComponents/pug/formComponents.pug
+++ b/commonComponents/pug/formComponents.pug
@@ -3,30 +3,22 @@ mixin text(name, label, value, tooltip, placeholder, readonly)
     if (readonly)
       +hidden(name, value)
     +controlLabel(name, label, tooltip)
-    input.form-control(id=name, type='text', name=name, value=value, placeholder=placeholder, disabled=readonly)
-    script.
-      $(#{name}).on('blur', function () {
-        $(this).val($(this).val().trim());
-      });
+    input.form-control.trim-text(id=name, type='text', name=name, value=value, placeholder=placeholder, disabled=readonly)
 
 mixin textWithTags(name, label, value, tags)
   .form-group
     +controlLabel(name, label)
-    select.form-control(multiple, id=name, name=name)
+    select.form-control(multiple, id=name, name=name, data-tags=true, data-token-separators=[',', ', '])
       each tag in tags
         option(selected = value.indexOf(tag) > -1) #{tag}
-    script.
-      $(#{name}).select2({tags: true, tokenSeparators: [',', ', ']});
 
 mixin singleselect(name, label, value, placeholder, tags)
   .form-group
     +controlLabel(name, label)
-    select.form-control(id=name, name=name)
+    select.form-control(id=name, name=name, data-placeholder=placeholder)
       option(value='') #{' '}
       each tag in tags
         option(value = tag.iso, selected = value && value.indexOf(tag.iso) === 0) #{tag.name}
-    script.
-      $("##{name}").select2({placeholder: "#{placeholder}"});
 
 mixin multiselect(name, label, value, tags)
   .form-group
@@ -34,17 +26,13 @@ mixin multiselect(name, label, value, tags)
     select.form-control(multiple, id=name, name=name)
       each tag in tags
         option(selected = value.indexOf(tag) > -1) #{tag}
-    script.
-      $(#{name}).select2();
 
 mixin editableMultiselect(name, label, value, tags)
   .form-group
     +controlLabel(name, label)
-    select.form-control(multiple, id=name, name=name)
+    select.form-control(multiple, id=name, name=name, data-tags=true)
       each tag in tags
         option(selected = value.indexOf(tag) > -1) #{tag}
-    script.
-      $(#{name}).select2({tags: true});
 
 mixin currency(name, label, value, tooltip, placeholder, readonly)
   .form-group
@@ -52,8 +40,6 @@ mixin currency(name, label, value, tooltip, placeholder, readonly)
       +hidden(name, value)
     +controlLabel(name, label, tooltip)
     input.form-control.currency(id=name, type='text', name=name, placeholder=placeholder, disabled=readonly, data-a-sign=' €', data-p-sign='s', data-a-dec=t('general.separator'), data-a-sep='')
-    script.
-      $('.currency').autoNumeric('init');
 
 mixin textareaPure(name, label, value, placeholder)
   +textareaInternal('form-control', '4', name, label, value, null, placeholder)
@@ -121,8 +107,6 @@ mixin colorPicker(name, value)
     .input-group.c-picker
       span.input-group-addon: i
       input.form-control(id=name, type='text', name=name, value=value)
-    script.
-      $('.c-picker').colorpicker();
 
 mixin twitter(name, label, value)
   .form-group
@@ -139,8 +123,6 @@ mixin controlLabel(name, label, tooltip)
     -if (tooltip)
       span.tooltiplabel(data-original-title=tooltip) #{label}:&nbsp;
         i.fa.fa-question-circle
-      script.
-        $('.tooltiplabel').each(function() {$(this).tooltip()})
     -else
       | #{label}:
 
