--- a/softwerkskammer/lib/payment/views/index.pug
+++ b/softwerkskammer/lib/payment/views/index.pug
@@ -15,3 +15,11 @@ block content
       +paymentMoneyTransfer(paymentInfo)
     .col-md-6
       +paymentCreditCard(paymentInfo, placeholder, '/payment/submitCreditCard')
+
+block scripts
+  script.
+    $('.currency').each(function () {
+      /* eslint no-console: 0 */
+      $(this).autoNumeric('init');
+    });
+      
