moving scripts to "block scripts" in almost every .pug

--- a/socrates/lib/members/views/get.pug
+++ b/socrates/lib/members/views/get.pug
@@ -60,3 +60,7 @@ block content
       a.btn.btn-primary(href='/mailsender/contactMember/' + encodeURIComponent(member.nickname()))
         i.fa.fa-envelope
         | &nbsp;#{t('members.send_email', {firstname: member.firstname(), lastname: member.lastname()})}
+
+block scripts
+  +avatarscript
+      
