--- a/softwerkskammer/lib/members/views/editavatar.pug
+++ b/softwerkskammer/lib/members/views/editavatar.pug
@@ -49,6 +49,8 @@ mixin editavatar(member, returnToParticipantsListing)
       +hidden('y')
       +hidden('h')
       +hidden('w')
+
+mixin avatarscript
   script.
     $(function () {
       var preview = $('img#preview');
