--- a/softwerkskammer/lib/members/views/index.pug
+++ b/softwerkskammer/lib/members/views/index.pug
@@ -9,8 +9,10 @@ block content
     h2 #{t('members.members')}
   .row
     .col-md-6.col-md-push-6
-      +tagCloud(members, '#cb6868')
+      +tagCloud
     .col-md-6.col-md-pull-6
       +memberlistHeading(t('members.has'), members.length)
       +memberlist(members)
 
+block scripts
+  +tagCloudScript(members, '#cb6868')
