--- a/softwerkskammer/lib/site/views/index.pug
+++ b/softwerkskammer/lib/site/views/index.pug
@@ -55,6 +55,7 @@ block content
           strong Kurz:
           | Wir wollen die richtige Software entwickeln, und wir wollen die Software richtig entwickeln.
 
+block scripts
   script.
     function adjustMapsize() {
       $('.groupsmap').each(function() {$(this).height(1.289 * $(this).width()); })
