oopsi with googlemaps

--- a/softwerkskammer/views/googlemaps-component.pug
+++ b/softwerkskammer/views/googlemaps-component.pug
@@ -1,4 +1,4 @@
-mixin map(location, width, height)
+mixin map(location)
   script(src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBicQlzzNdi4OKA5uxV7SRwPpU8s4qUcS8', type='text/javascript')
   script.
     $(document).ready(function () {
