--- a/softwerkskammer/lib/activities/views/get.pug
+++ b/softwerkskammer/lib/activities/views/get.pug
@@ -67,7 +67,7 @@ block content
               | &nbsp;
               a(href='/members/' + editor) #{editor}
     .col-md-6
-      #map.hidden-print(style='width: ' + width + '; height: ' + height)
+      #map.hidden-print(style='width: ' + '100%' + '; height: ' + '450px')
 
 block scripts
   +map(activity.location(), '100%', '450px')
