--- a/socrates/lib/site/views/index.pug
+++ b/socrates/lib/site/views/index.pug
@@ -10,7 +10,7 @@ block before-container
   +roommateBanner(registration)
   .jumbotron.stage-background
     .container
-      img.logo-left(src='img/socrates2017_logo.png', alt='SoCraTes Conference 2017 - Software Craftsmanship and ' + 'Testing')
+      img.logo-left(src='img/socrates2017_logo.png', alt='SoCraTes Conference 2017 - Software Craftsmanship and ' + 'Testing', width=233, height=233)
       h1 SoCraTes 2017
       h2: small 7th International Software Craftsmanship and Testing Conference in Germany
       h2: small 24 - 27 August 2017, Soltau, Germany
