--- a/socrates/lib/site/views/location.pug
+++ b/socrates/lib/site/views/location.pug
@@ -74,6 +74,7 @@ block content
     able to access the SoCraTes Wiki, where you can get to know other participants before the conference, share information about Taxi- and
     Ride sharing and other organisational matters.
 
+block scripts  
   script(type='text/javascript', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyBHet1NLP9NBFGt-q-x42TE00L4EDTJnXU&sensor=false')
   script.
     function initialize() {
