Adding SoCraTes Conference Switzerland 2017

--- a/socrates/lib/site/views/index.pug
+++ b/socrates/lib/site/views/index.pug
@@ -79,6 +79,11 @@ block content
                 small 12 - 14 May 2016, Rimini
             .col-sm-6
               h5
+                +extlink('http://socrates-ch.org/', 'SoCraTes Conference Switzerland')
+                br
+                small 9 - 12 Mar 2017, Ftan
+            .col-sm-6
+              h5
                 +extlink('http://socrates-day.ch/', 'SoCraTes Day Switzerland')
                 br
                 small 17 May 2016, Zurich
