Fixing order of the conferences by date

--- a/socrates/lib/site/views/index.pug
+++ b/socrates/lib/site/views/index.pug
@@ -64,11 +64,6 @@ block content
           .row
             .col-sm-6
               h5
-                +extlink('http://www.codefreeze.fi/', 'CodeFreeze')
-                br
-                small 15 - 19 Jan 2017 , Kiilopää, Finland
-            .col-sm-6
-              h5
                 +extlink('http://www.socrates-conference.es/', 'SoCraTes Canaries')
                 br
                 small 10 - 13 Mar 2016, Gran Canaria
@@ -79,24 +74,9 @@ block content
                 small 12 - 14 May 2016, Rimini
             .col-sm-6
               h5
-                +extlink('http://socrates-ch.org/', 'SoCraTes Conference Switzerland')
-                br
-                small 9 - 12 Mar 2017, Ftan
-            .col-sm-6
-              h5
-                +extlink('http://socrates-day.ch/', 'SoCraTes Day Switzerland')
-                br
-                small 17 May 2016, Zurich
-            .col-sm-6
-              h5
                 +extlink('http://itakeunconf.com/', 'I T.A.K.E. Unconference')
                 br
                 small 19 - 20 May 2016, Bucharest
-            .col-sm-6
-              h5
-                +extlink('http://socratesuk.org/', 'SoCraTes UK')
-                br
-                small 15 - 18 June 2017, Dorking
             .col-sm-6
               h5
                 +extlink('https://www.socrates-conference.cl/', 'SoCraTes Chile')
@@ -122,9 +102,26 @@ block content
                 +extlink('http://socrates-conference.at/', 'SoCraTes Day Linz')
                 br
                 small 29 Oct 2016, Linz, Austria
-
-
-
+            .col-sm-6
+              h5
+                +extlink('http://www.codefreeze.fi/', 'CodeFreeze')
+                br
+                small 15 - 19 Jan 2017 , Kiilopää, Finland
+            .col-sm-6
+              h5
+                +extlink('http://socrates-ch.org/', 'SoCraTes Conference Switzerland')
+                br
+                small 9 - 12 Mar 2017, Ftan
+            .col-sm-6
+              h5
+                +extlink('http://socratesuk.org/', 'SoCraTes UK')
+                br
+                small 15 - 18 June 2017, Dorking
+            .col-sm-6
+              h5
+                +extlink('http://socrates-day.ch/', 'SoCraTes Day Switzerland')
+                br
+                small September 2017, Zurich
 
     .logocolumn.col-sm-4.col-md-3.col-lg-4.col-md-offset-1.col-lg-offset-0
       .sidebar
