fixing performance problem in R.union without suitable comparator - also fixed typo in pug file

--- a/softwerkskammer/lib/administration/views/memberTable.pug
+++ b/softwerkskammer/lib/administration/views/memberTable.pug
@@ -45,7 +45,7 @@ block content
                 td #{member.lastname()}
                 td #{member.location()}
                 td #{member.reference()}
-                td.ellipsis: span(rel='tooltip', data-placement='left', data-contentmember.interests()) #{member.interests()}
+                td.ellipsis: span(rel='tooltip', data-placement='left', data-content=member.interests()) #{member.interests()}
                 td #{member.site()}
                 td #{member.profession()}
                 td #{member.email()}
